# OBS-Stack

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  LICENSE  QUICK-START.md  README.md  WINDOWS-DEVELOPMENT.md  configure-alerts.sh  configure-dashboards.sh  configure-retention.sh  configure-user-monitoring.sh  docker-compose.windows.yml  docker-compose.yml  implement-all-steps.sh  install.sh  obs  obs-stack.service  obs.bat  quick-install-windows.ps1  quick-install.sh  setup-git.ps1  setup-windows.ps1  setup.sh  simulate-users.ps1  test-windows.old.ps1
docs/: CADVISOR-GUIDE.md  GRAFANA-GUIDE.md  OPSHUB-API-GUIDE.md  PROMETHEUS-GUIDE.md  README.md
loki/: local-config.yaml
opshub/: Dockerfile  cli.py  config.py  database.py  entrypoint.sh  logging_pipeline.py  metrics_gpu.py  metrics_host.py  pyproject.toml  server.py
prometheus/: prometheus.yml
promtail/: promtail-config.yaml
