[project]
name = "opshub"
version = "0.1.0" 
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "docker>=6.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.0.0",
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
docker-logger = "opshub.cli:app"
opshub = "opshub.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
